# NuCAD

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
src/nucad/: __init__.py  error.py  types.py
src/nucad/core/: __init__.py  api.py  geometry.py  material.py  particle.py  track.py  util.py
src/nucad/physics/: relkin.py
src/nucad/setup/: __init__.py  setup.py
src/nucad/util/: cqutil.py
