[project]
name = "nucad"
version = "0.1.0"
description = "CAD tool focused on designing nuclear physics experimental instruments"
readme = "README.md"
authors = [
    { name = "Takayuki Yano", email = "yano.takayuki.55w@st.kyoto-u.ac.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.5.2",
    "cadquery-ocp>=7.7.2",
    "numpy>=2.2.6",
    "pycatima>=1.98",
]

[project.scripts]
nucad = "nucad:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
