[project]
name = "nucad"
version = "0.1.0a4"
description = "CAD tool focused on designing nuclear physics experimental instruments"
readme = "README.md"
authors = [
    { name = "Takayuki Yano", email = "yano.takayuki.55w@st.kyoto-u.ac.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "cadquery>=2.5.2",
    "numpy>=2.0.0",
    "pycatima>=1.98",
]

[project.urls]
source = "https://github.com/yano404/NuCAD"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
